--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <li><a href="./12-range/index.html">滑杆</a></li>
   <li><a href="./13-progress/index.html">进度条</a></li>
   <li><a href="./11-password-visual/index.html">密码可见</a></li>
+  <li><a href="./20-form-validation">表单级校验</a></li>
+  <li><a href="./21-h5-validation/index.html">H5校验</a></li>
   <li><a href="./31-echart/index.html">二进熵函数曲线</a></li>
+  <li><a href="./32-map/index.html">百度地图</a></li>
   <li><a href="./33-hightlight/index.html">语法高亮</a></li>
   <li><a href="./41-timer-button/index.html">定时器按钮组件</a></li>
   <li><a href="./42-password-visual/index.html">密码可见组件</a></li>
