--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="./31-echart/index.html">二进熵函数曲线</a></li>
   <li><a href="./32-map/index.html">百度地图</a></li>
   <li><a href="./33-hightlight/index.html">语法高亮</a></li>
+  <li><a href="./34-excel/index.html">Excel表格</a></li>
   <li><a href="./41-timer-button/index.html">定时器按钮组件</a></li>
   <li><a href="./42-password-visual/index.html">密码可见组件</a></li>
   <!-- 参考上一行代码，后续任务链接加到这里 -->
